@@ -1,6 +1,7 @@
 
 Version Next
 
+    - Added IdGenerator
     - Added SpringXSLUpdateTransformConfigurer
 
 Version 1.0.227 Released Jan 18, 2012
